infrastructure/traefik/base/default-headers-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: traefik
  labels:
    app: traefik
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
    customFrameOptionsValue: SAMEORIGIN
    customResponseHeaders:
      X-Forwarded-Proto: https
    referrerPolicy: "same-origin"
    permissionsPolicy: "camera=(), microphone=(), geolocation=()"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: compress
  namespace: traefik
  labels:
    app: traefik
spec:
  compress:
    excludedContentTypes:
      - text/event-stream
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: traefik
  labels:
    app: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true
